reports/dist/run-curated-live-20260602-234624-95262/service-mesh-istio-ingress-gateway-basic/artifacts/manifests/istio-virtualservices.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"sample-vs","namespace":"sample"},"spec":{"gateways":["sample-igw"],"hosts":["sample.test.local"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"sample.sample.svc.cluster.local","port":{"number":80}}}]}]}}
    creationTimestamp: "2026-06-03T03:59:26Z"
    generation: 1
    name: sample-vs
    namespace: sample
    resourceVersion: "675"
    uid: a56f4bb6-43b7-4083-b798-4133c41e660b
  spec:
    gateways:
    - sample-igw
    hosts:
    - sample.test.local
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: sample.sample.svc.cluster.local
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
