reports/dist/run-curated-live-20260602-234624-95262/service-mesh-istio-ingress-gateway-basic/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-03T03:59:22Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "633"
    uid: 74eb3bd0-2d9c-4c02-9f49-91b25e0f3864
  spec:
    clusterIP: 10.96.151.172
    clusterIPs:
    - 10.96.151.172
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
